# rustAetherling

./: .gitmodules  Cargo.toml  README.md  build.rs
protobuf/: space_time.proto
src/: languages.rs  lib.rs  main.rs
src/languages/: seq_value_to_st_value_and_valid_strings.rs  sequence.rs  space_time.rs  util.rs  value_to_string.rs
src/languages/sequence/: serialize.rs  serialize_types.rs  serialize_values.rs  types.rs
src/languages/space_time/: ast.rs  serialize.rs  types.proto  types.rs  value_to_string.rs
src/languages/space_time/value_to_string/: convert_seq_val_to_st_val_and_valid_strings.rs  convert_seq_val_to_st_val_string.rs  to_atom_strings.rs
src/languages/value_to_string/: convert_seq_val_to_st_val_and_valid_strings.rs  to_atom_strings.rs
tests/: integration_test.rs  serialization_test.rs
