[package]
name = "aetherling"
version = "0.1.0"
authors = ["David Durst <davidbdurst@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1.12"
rand = "0.7.3"
csv = "1.1"
serde = { version = "1", features = ["derive", "rc"] }
prost = "0.6"

[build-dependencies]
prost-build = "0.6"

